--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,40 +1,48 @@
-name: Deploy Static Website to S3
+name: Deploy static site to S3
 
 on:
   push:
-    branches:
-      - main  # Trigger on push to the main branch
+    branches:  "main" 
+
+permissions:
+  contents: read
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      # Set up AWS CLI
-      - name: Set up AWS CLI
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: Setup Node (only needed if you have package.json)
+        if: hashFiles('package.json') != ''
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+
+      - name: Install dependencies (React/Node projects)
+        if: hashFiles('package.json') != ''
+        run: npm i
+
+      - name: Build (React/Node projects)
+        if: hashFiles('package.json') != ''
+        run: npm run build
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # Sync files to S3 bucket
-      - name: Sync files to S3
-        run: |
-          aws s3 sync ./ s3://your-bucket-name --delete
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      # If React: deploy build/ folder
+      - name: Deploy React build to S3
+        if: hashFiles('package.json') != ''
+        run: aws s3 sync build/ s3://${{ secrets.S3_BUCKET }} --delete
 
-      # Invalidate CloudFront cache (optional, if you're using CloudFront)
-      - name: Invalidate CloudFront cache
-        run: |
-          aws cloudfront create-invalidation --distribution-id your-distribution-id --paths "/*"
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
+      # If plain static: deploy repo root (excluding .git and workflow files)
+      - name: Deploy static files to S3
+        if: hashFiles('package.json') == ''
+        run: aws s3 sync . s3://${{ secrets.S3_BUCKET }} --delete --exclude ".git/*" --exclude ".github/*"
